--- a/shan/src/css/style.css
+++ b/shan/src/css/style.css
@@ -210,6 +210,7 @@ nav a.active {
   width: 100%;
   color: var(--white);
   margin-top: 24px;
+  text-align: center;
 }
 
 .footer_content {
@@ -221,8 +222,22 @@ nav a.active {
   padding: 12px 0;
 }
 
+.footer_content div{
+  transform: translateX(-36px);
+}
+
 .footer hr {
   border: 1px solid var(--white);
   margin: 10px auto;
   border-radius: 24px;
+}
+
+.footer a {
+  color: var(--white); 
+  text-decoration: none;
+  padding: 10px 0;
+}
+
+.footer a:hover {
+  text-decoration: underline;
 }
